force-app/main/default/objects/sfdc_account_updatedSuccess__e/sfdc_account_updatedSuccess__e.object-meta.xml
<CustomObject>
    <description>Platform Event that fires when an Account record is updated successfully. Carries a JSON payload of changed mapped fields plus fixed header identifiers for downstream integration.</description>
    <label>sfdc_account_updatedSuccess</label>
    <pluralLabel>sfdc_account_updatedSuccesses</pluralLabel>
</CustomObject>