force-app/main/default/objects/sfdc_account_updatedSuccess__e/fields/Updated_Fields__c.field-meta.xml
<CustomField>
    <fullName>Updated_Fields__c</fullName>
    <description>JSON-serialized payload containing changed Account field values for downstream integration consumption.</description>
    <inlineHelpText>JSON string with changed mapped fields.</inlineHelpText>
    <label>Updated Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>